<?xml version="1.0"?>
<package format="3">
  <name>cart_detect_sim</name>
  <version>0.1.0</version>
  <description>Simulation mock for cart_detect services (detect / enable_detection) with configurable cart positions</description>

  <maintainer email="sawada@fujiamerica.com">yutosawada</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>rosidl_default_generators</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>cart_detect</depend>
  <depend>std_srvs</depend>
  <depend>geometry_msgs</depend>
  <depend>tf2</depend>
  <depend>tf2_ros</depend>
  <depend>sim_world_msgs</depend>

  <exec_depend>rosidl_default_runtime</exec_depend>

  <member_of_group>rosidl_interface_packages</member_of_group>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
